# GeotRadarSim

./: .gitignore  HELP.md  README.md
.atl/: skill-registry.md
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: analysis.py  export.py  radars.py  terrain.py
backend/app/config/radars/: groundprobe-ssr-fx.yaml  ibis-arcsar360.yaml  reutech-msr.yaml
backend/app/models/: domain.py
backend/app/services/: dtm_generator.py  dxf_parser.py  export_service.py  job_manager.py  los_engine.py  radar_registry.py  stl_parser.py  synthetic_terrain.py  terrain_store.py
backend/tests/: test_analysis_api.py  test_domain_models.py  test_dtm_generator.py  test_dxf_parser.py  test_export_api.py  test_export_service.py  test_los_engine.py  test_main.py  test_radar_registry.py  test_radars_api.py  test_shadow_zones.py  test_stl_parser.py  test_stl_upload_api.py  test_synthetic_terrain.py  test_terrain_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: AnalysisHistory.tsx  ExportPanel.test.tsx  ExportPanel.tsx  MultiRadarPanel.tsx  RadarControls.test.tsx  RadarControls.tsx  ShadowOverlay.tsx  TerrainViewer.tsx
frontend/src/hooks/: useAnalysis.ts  useTerrain.ts
frontend/src/services/: api.test.ts  api.ts  localDataStore.ts  terrainEngine.ts
frontend/src/store/: analysisStore.test.ts  analysisStore.ts  terrainStore.test.ts  (+1 more)
openspec/: config.yaml
(+15 files in other folders)
